<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="150dp"
        android:background="@color/posts_color"
        android:orientation="vertical"
        android:id="@+id/rateFacilityView"
        android:elevation="20dp">

        <TextView
            android:id="@+id/RateFacilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/rate_facility_title"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/RateFacilityDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/comment_facility_title"
            android:textAlignment="center"
            android:textColor="@color/white_light"
            android:textSize="18dp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:secondaryProgressTint="@color/UBCyellow"
            android:progressTint="@color/UBCyellow"
            android:numStars="5"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:rating="0.0"
            android:theme="@style/RatingBar"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="25dp"
            android:background="@color/UBCPurpleDark"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comment_hint"
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFF0"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button_review"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/UBCPurpleLight"
                android:text="@string/cancel"
                android:textColor="@color/UBCyellow"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button_review"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@color/UBCPurpleLight"
                android:gravity="end"
                android:paddingRight="15dp"
                android:text="@string/submit"
                android:textColor="@color/UBCyellow"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>