...
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Rating Activity -->
    <string name="rate_facility_title">Rate this Facility</string>
    <string name="comment_facility_title">Please select some stars and give\nyour feedback</string>
    <string name="comment_hint">Please write your comments here ...</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

...
